--- a/Topics/0 - Virtualization/0.2 - address translation.md
+++ b/Topics/0 - Virtualization/0.2 - address translation.md
@@ -25,7 +25,7 @@
     - To move a process’s address space, the OS first deschedules the process; then, the OS copies the address space from the current location to the new location; finally, the OS updates the saved base register (in the process structure) to point to the new location.
 - Some inefficiency of base-and-bounds
 
-  - Internal fragmentation (space inside the allocated unit is not all used)
+  - **Internal fragmentation** (space inside the allocated unit is not all used)
 
     - restricted to placing an address space in a fixed-sized slot and thus internal fragmentation can arise
   - Slight generalization of base and bounds: segmentation (next)
