clean up paging

--- a/Topics/0 - Virtualization/0.5 - processes.md
+++ b/Topics/0 - Virtualization/0.5 - processes.md
@@ -2,15 +2,21 @@
 
 - Process
 
-  - Contents of memory is in its address space.
-  - Contents of CPU registers (including the program counter and stack pointer).
-    - program counter (PC), or instruction pointer (IP): which instruction will execute next
-    - stack pointer & frame pointer: manage the stack for function parameters, local variables, and return addresses
-    - Stack pointer: tracks the top of the stack in memory
-    - Frame pointer: points to a fixed location within the stack frame of the current function. The stack frame contains the function’s local variables, parameters, and return address.
-      - Redundant (can just use stack pointer + offset? save one extra register. )
-  - Information about I/O.
-    - persistent storage devices: I/O information for a list of files the process currently has open
+  Processor (Von Neumann model of computing):
+- Fetch an instruction from memory
+- Decode the instruction (Figure out what instruction it is)
+- Execute the instruction
+- Contents of memory is in its address space.
+- Contents of CPU registers (including the program counter and stack pointer).
+
+  - program counter (PC), or instruction pointer (IP): which instruction will execute next
+  - stack pointer & frame pointer: manage the stack for function parameters, local variables, and return addresses
+  - Stack pointer: tracks the top of the stack in memory
+  - Frame pointer: points to a fixed location within the stack frame of the current function. The stack frame contains the function’s local variables, parameters, and return address.
+    - Redundant (can just use stack pointer + offset? save one extra register. )
+- Information about I/O.
+
+  - persistent storage devices: I/O information for a list of files the process currently has open
 - Process API:
 
   - Calls programs can make related to processes: creation, destruction, etc.
@@ -38,7 +44,7 @@
 
 ## Process Creation
 
-* ![image](images/process_creation.png)
+* ![image](image/process_creation.png)
 
 - In early (or simple) operating systems, the loading process is done eagerly, i.e., all at once before running the program;
 - Lazy loading: loading pieces of code or data only as they are needed during program execution (i.e. paging, swapping)
@@ -53,8 +59,7 @@
 - Being moved from ready to running means the process has been scheduled; being moved from running to ready means the process has been descheduled.
 - Once a process has become blocked (e.g., by initiating an I/O operation), the OS will keep it as such until some event occurs (e.g., I/O completion); at that point, the process moves to the ready state again (and potentially immediately to running again, if the OS so decides).
 - These need a OS scheduler.
-- ![image](images/process_state_transitions.png)
-
+  - ![image](image/process_state_transitions.png)
 - Register context: hold the contents of its registers; when the process is stopped, its registers will be saved to this memory location
 - Zombie: when the process has exited but has not yet been cleaned up
 - When finished, the parent will make one final call (e.g., `wait()`) to wait for the completion of the child, and to also indicate to the OS that it can clean up any relevant data structures that referred to the now-extinct process.
@@ -62,3 +67,23 @@
 ## What OS tracks about a process
 
 - Register context will hold, for a stopped process, the contents of its registers. When a process is stopped, its registers will be saved to this memory location; by restoring these registers (i.e., placing their values back into the actual physical registers), the OS can resume running the process.
+
+# Process API
+
+* Process ID (PID)
+* `fork()`
+  * The value it returns to the caller of fork() is different. Specifically, while the parent receives the PID of the newly-created child, the child receives a return code of zero.
+* `exec()` family of system calls allows a child to break free from its similarity to its parent and execute an entirely new program.
+  * Loads the code (and static data) from that executable and overwrite its current code segment (and current static data) with it; the heap and stack and other parts of the memory space of the program are re-initialized
+  * Does not create a new process; transforms the currently running program into a different running program
+  * Never returns if success; as if the old program never runs.
+* `wait()`
+  * Parent can wait for the child to finish executing, thereby finishing before the child.
+* The separation of fork() and exec() enables features like input/output redirection, pipes and other cool features.
+  * The separation of fork() and exec() is essential in building a UNIX shell, because it lets the shell run code after the call to fork() but before the call to exec(); this code can alter the environment of the about-to-be-run program, and thus enables a variety of interesting features to be readily built.
+  * The way the shell accomplishes input/output redirection is quite simple: when the child is created, before calling exec(), the shell (specifi- cally, the code executed in the child process) closes standard output and opens the file newfile.txt. By doing so, any output from the soon- to-be-running program wc is sent to the file instead of the screen
+* Shell:
+  * It shows you a prompt and then waits for you to type something into it. You then type a command (i.e., the name of an executable program, plus any arguments) into it; in most cases, the shell then figures out where in the file system the executable resides, calls fork() to create a new child process to run the command, calls some variant of exec() to run the command, and then waits for the command to complete by calling wait(). When the child completes, the shell returns from wait() and prints out a prompt again, ready for your next command
+* Signals
+  * Process control is available in the form of signals, which can cause jobs to stop, continue, or even terminate.
+  * a process should use the signal() system call to “catch” various signals; doing so ensures that when a particular signal is delivered to a process, it will suspend its normal execution and run a particular piece of code in response to the signal.
