--- a/Topics/0 - Virtualization/0.6 - paging.md
+++ b/Topics/0 - Virtualization/0.6 - paging.md
@@ -1,24 +1,30 @@
 # Paging
 
 - Paging: a new solution to virtualizing memory
+
   - Correspondingly, we view physical memory as an array of fixed-sized slots called page frames; each of these frames can contain a single virtual-memory page.
 - Pros
+
   - Does not lead to external fragmentation, as it divides memory into fixed-sized units
   - Quite flexible: enable sparse use of virtual addr space
 - Cons
-  - Slower machine: many extra memory accesses
-  - Memory waste: memory filled with page tables instead of useful application data
+
+  * Slower machine: many extra memory accesses
+  * Memory waste: memory filled with page tables instead of useful application data
 - OS takes two approaches to deal with space-management
+
   - Variable-sized pieces: segmentation
     - Cons: space can become fragmented, allocation challenging
   - Fixed-sized pieces: paging
     - Fixed-size unit: **page**
     - Physical memory is an array of fixed-sized slots called **page frames**
 - Challenge
+
   - How can we virtualize memory with pages, so as to avoid the problems of segmentation?
   - What are the basic techniques?
   - How do we make those techniques work well, with minimal space and time overheads?
 - **Page table**
+
   - **Per-process data structure** to record where each virtual page of the address space is placed in physical memory.
   - **VPN:** virtual page number
   - **Offset:** within the page
@@ -52,7 +58,7 @@ MMU: stores the base and bound register; as well as TLB.
     - Useful in determine which pages are popular in page replacement
 - we can now index our page table and find which physical frame virtual page 1 resides within. In the page table above the physical frame number (PFN) (also sometimes called the physical page number or PPN) is 7 (binary 111).
 
-  - ![alt text](images/image-6.png)
+  - ![alt text](image/image-6.png)
 - Solution #2: **page + segments**
 - - Problem: most of the page table unused, full of invalid entries (e.x. between stack and heap)
   - Approach: one page table per logical segment
@@ -66,10 +72,14 @@ MMU: stores the base and bound register; as well as TLB.
     - Has a **valid bit** and a **page frame number**
     - Valid bit: if PDE is valid, it means that at least one of the pages of the page table that entry points to (via the PFN) is valid
 - Page Fault
--     ***Page fault handler***- **Page fault:** hen the HW looks in the PTE, it may find that page is *not present* in physical memory
+- ***Page fault handler***- **Page fault:** hen the HW looks in the PTE, it may find that page is *not present* in physical memory
 
   - Upon page fault, **OS is invoked with page-fault handler**
     - Find the page, do I/O from swap space (i.e. reserved space on the disk for moving pages back and forth)
+      - **Swap Space**: reserved space on the disk for moving pages back and forth
+        - Assume size of swap space is very large
+      - The first thing we will need to do is to reserve some space on the disk for moving pages back and forth. In operating systems, we generally refer to such space as swap space, because we swap pages out of memory to it and swap pages into memory from it.
+        - Thus, we will simply assume that the OS can read from and write to the swap space, in page-sized units. To do so, the OS will need to remember the disk address of a given page.
     - Update page table to mark page as present, record in memory location of the new-fetched page, retry
 
 ## Advanced
@@ -130,9 +140,40 @@ MMU: stores the base and bound register; as well as TLB.
 
 - Simply a hardware cache of popular virtual-to-physical address translation
 - Maintain virtual-to-physical translations that are only valid for the current running process
+
   - Flush on context switches
 - Can be software-managed or hardware-managed
+
   - Software-managed: HW raises exception on TLB miss, jumps to kernel trap handler
+- **Hardware-managed TLBs**: hardware handles TLB miss entirely
+
+* HW has to know where the page tables are located in memory (via a page table base register) and their exact format
+
+  * On TLB miss, HW walks the page table, and update TLB with translation, then **retry**
+  * If the page is valid and present in physical memory, the hardware extracts the PFN from the PTE, installs it in the TLB, and retries the instruction, this time generating a TLB hit; so far, so good.
+
+- **Software-managed TLB**
+
+  - E.x. RISC
+  - On TLB miss, HW raises an exception, which pauses the current instruction stream, raises the privilege level to kernel mode, and jumps to a **trap handler**
+  - Note
+
+    - Return-from-trap different from syscall
+      - Instead of resume execution at instruction after the trap
+      - We want to resume execution at instruction at caused the trap to retry
+      - HW must save a different PC to resume correctly
+    - OS needs to be careful of infinite chain of TLB misses
+      - Solution: TLB miss handlers in physical memory, or reserve some entires in the TLB for permanently-valid translations for the handler code
+  - Pros
+  - Flexibility
+
+    - OS can use any data structure it wants to implement the page table without HW
+  - Simplicity
+
+    - HW doesn’t do much on a miss, just raise an exception and OS TLB miss handler do the rest
+      - A typical TLB might have 32, 64, or 128 entries and be what is called fully associa- tive. Basically, this just means that any given translation can be anywhere in the TLB, and that the hardware will search the entire TLB in parallel to find the desired translation. A TLB entry might look like this:
+    - VPN | PFN | other | bits
+    - To reduce this overhead, some systems add hardware support to en- able sharing of the TLB across context switches. In particular, some hard- ware systems provide an address space identifier (ASID) field in the TLB. You can think of the ASID as a process identifier (PID), but usu- ally it has fewer bits (e.g., 8 bits for the ASID versus 32 bits for a PID)
 
 ### VAX / VMS second-chance list
 
@@ -147,6 +188,8 @@ Key features (approximate LRU):
 2. Two second-chance list: before completely evicting a page from memory, it is put into two second chance list
 
 - 1) clean-page free list: hold pages that have not been modified since they were last loaded
+     1) One interesting approach that has been around for some time is the use of segregated lists. The basic idea is simple: if a particular application has one (or a few) popular-sized request that it makes, keep a separate list just to manage objects of that size; all other requests are forwarded to a more general memory allocator.
+     2) 
 - 2) dirty-page list: modified
 
 When a process exceeds RSS:
@@ -159,7 +202,12 @@ When a process need to add a new page
 1. first look at free page from clean list
 2. if process faults on a page that was moved to one of the second-chance list, it can reclaim it, avoid disk access
 
-### NRU
+– Intuition: First referenced long time ago, done with it now
+– Advantages: Fair: All pages receive equal residency; Easy to implement
+– Disadvantage: Some pages may always be needed
+
+
+### NRU (Clock Algorithm)
 
 * Approximate LRU with efficient implementation
 * Clock algorithm: replace page that is “old enough”
@@ -176,3 +224,57 @@ When a process need to add a new page
 
 * FIFO
 * Second-chance algorithm.
+
+**Conflict miss**: arise in hardware because of limits on where an item can be placed in a hardware cache, due to set-associativity- It does not arise in OS page cache because caches are always fully-associative (i.e. there are no restrictions on where in memory a page can be placed)
+
+
+- OS decides when to bring a page into memory (i.e. page selection policy)
+  - Most pages: demand paging, bring in on-demand
+  - Prefetching: i.e. page P is brought into memory, code P + 1 will likely soon be accessed
+- OS decides how to write pages out to disk
+  - One at a time v.s clustering (or grouping)
+
+
+## Page Allocator
+
+Buddy Managed Heap- ![alt text](image/image-5.png)
+
+- By using a buddy system, the allocator can quickly find a free block of memory of a given size, and can also quickly coalesce free blocks of memory when they are freed.
+- - You might have noticed that the interface to free(void *ptr) does not take a size parameter; thus it is assumed that given a pointer, the malloc library can quickly determine the size of the region of memory being freed and thus incorporate the space back into the free list.
+- To accomplish this task, most allocators store a little bit of extra infor- mation in a header block which is kept in memory, usually just before the handed-out chunk of memory.
+- the size of the free region is the size of the header plus the size of the space allocated to the user. Thus, when a user requests N bytes of memory, the library does not search for a free chunk of size N; rather, it searches for a free chunk of size N plus the size of the header.
+
+  - Free list will point to the next chunk of free space, e.g.
+  - ![alt text](image/image-4.png)
+- One interesting approach that has been around for some time is the use of segregated lists. The basic idea is simple: if a particular application has one (or a few) popular-sized request that it makes, keep a separate list just to manage objects of that size; all other requests are forwarded to a more general memory allocator.
+- One particular allocator, the slab allocator by uber-engineer Jeff Bonwick (which was designed for use in the Solaris kernel), handles this issue in a rather nice way.
+
+  - it allocates a number of object caches for kernel objects that are likely to be requested frequently (such as locks, file-system inodes, etc.); the object caches thus are each segregated free lists of a given size and serve memory allocation and free requests quickly.
+
+## Others
+
+- Common errors
+  - Automatic memory management
+    - A garbage collector runs and frees unused references
+  - Errors
+    - *Forget to allocate memory* —> segmentation fault
+    - *Not allocating enough memory* —> buffer overflow
+      > Even though it ran correctly once, doesn’t mean it’s correct
+      >
+    - *Forgetting to initialize allocated memory*
+      - Random
+    - *Forgetting to free memory* —> memory leak
+    - *Freeing memory before you are done* —> dangling pointer
+    - *Freeing memory repeatedly* —> double free, undefined behavior
+    - *Calling free() incorrectly* —> invalid frees
+- malloc() and free(). The reason for this is sim- ple: they are not system calls, but rather library calls.
+  - `brk`, which is used to change the location of the program’s break: the location of the end of the heap.
+  - `sbrk:` changethe space of the currently allocated program.
+  - By passing in the correct arguments, `mmap()` can create an anonymous memory region within your program — a region which is not associated with any particular file but rather with swap space,
+
+
+- Question: what should the OS do when memory is simply oversubscribed, and the memory demands of the set of running processes simply exceeds the available physical memory?
+- In this case, the system will constantly be paging —> **thrashing**
+- Approach: both detect and cope
+  - E.x. **Admission control:** not run a subset of the process, and hope that the working set fit in memory
+  - E.x. **Out-of-memory killer**: run this when memory is oversubscribed, the daemon choose a memory-intensive process and kill it
