--- a/Topics/0 - Virtualization/0.3 - paging.md
+++ b/Topics/0 - Virtualization/0.3 - paging.md
@@ -278,3 +278,10 @@ Buddy Managed Heap- ![alt text](image/image-5.png)
 - Approach: both detect and cope
   - E.x. **Admission control:** not run a subset of the process, and hope that the working set fit in memory
   - E.x. **Out-of-memory killer**: run this when memory is oversubscribed, the daemon choose a memory-intensive process and kill it
+
+## Page Cache
+
+
+The Page Cache- The Linux page cache is unified, keeping pages in memory from three primary sources: memory-mapped files, file data and metadata from de- vices (usually accessed by directing read() and write() calls to the file system), and heap and stack pages that comprise each process (sometimes called anonymous memory, because there is no named file underneath of it, but rather swap space). These entities are kept in a page cache hash table, allowing for quick lookup when said data is needed.
+
+- The page cache tracks if entries are clean (read but not updated) or dirty (a.k.a., modified). Dirty data is periodically written to the back- ing store (i.e., to a specific file for file data, or to swap space for anony- mous regions) by background threads (called pdflush), thus ensuring that modified data eventually is written back to persistent storage.
