--- a/Topics/0 - Virtualization/0.1 - address translation.md
+++ b/Topics/0 - Virtualization/0.1 - address translation.md
@@ -2,8 +2,7 @@
 
 - Address space for a process
   - Contains
-    - Code
-      - the instructions
+    - Code: the instructions
     - Stack
       - Grows due to function calls, etc.
       - The program, while it is running, uses a stack to keep track of where it is in the function call chain as well as to allocate local variables and pass parameters and return values to and from routines.
@@ -21,7 +20,6 @@
     - OS does multiplexing among different jobs
     - ![alt text](https://file+.vscode-resource.vscode-cdn.net/Users/maoziming/Library/Mobile%20Documents/com~apple~CloudDocs/Berkeley/Summer%202024/Prelim/Topics/0%20-%20Virtualization/images/sharing_memory.png)
 - 
-
 
 # Address Translation
 
@@ -54,7 +52,6 @@
 
     - restricted to placing an address space in a fixed-sized slot and thus internal fragmentation can arise
   - Slight generalization of base and bounds: segmentation (next)
-
 
 # Segmentation
 
