--- a/Topics/0 - Virtualization/0.4 - CPU scheduling.md
+++ b/Topics/0 - Virtualization/0.4 - CPU scheduling.md
@@ -19,7 +19,7 @@
   - STCF:
     - If we do not requite all jobs to run to completion:
     - Add **preemption**
-      - Any time a new job enters the system, the STCF scheduler determines which of the re- maining jobs (including the new job) has the least time left, and schedules that one.
+      - Any time a new job enters the system, the STCF scheduler determines which of the remaining jobs (including the new job) has the least time left, and schedules that one.
     - Better average turnaround time
       - Given the new assumptions, STCF is provably optimal
   - Response time: the time from when the job arrives in a system to the first time it is scheduled
@@ -27,53 +27,19 @@
   - SJF and STCF:
     - Bad for response time
   - Round Robin (Good for response time.)
-    - Time-slicing
     - Runs the job for a time slice (or a scheduling quantum); switch to the next job in the run queue.
     - The shorter the time is, the better performance of RR under response time metric
     - Too short: cost of context switching dominates (i.e. CPU caches, TLBs, branch predictors, and other on-chip hardware)
-    - Because turnaround time only cares about when jobs finish, RR is nearly pessimal, even worse than simple FIFO in many cases
-      - RR is worse for turnaround time.
+    - Because turnaround time only cares about when jobs finish, RR is nearly pessimal, even worse than simple FIFO in many cases: RR is worse for turnaround time.
     - Any policy that is fair —> but perform poorly on metrics such as turnaround time
       - willing to be unfair —> run shorter jobs to completion, but at the cost of the response time
       - value fairness —> response time is lowered, but at the cost of the turnaround time
   - Incorperating I/O: overlapping leads to better use of resources.
-    - currently-running job won’t be using the CPU dur- ing the I/O; it is blocked waiting for I/O completion.
+    - currently-running job won’t be using the CPU during the I/O; it is blocked waiting for I/O completion.
     - The scheduler also has to make a decision when the I/O completes. When that occurs, an interrupt is raised, and the OS runs and moves the process that issued the I/O from blocked back to the ready state. Of course, it could even decide to run the job at that point.
-  - ![alt text](job_scheduling.png)
-    - A common approach is to treat each 10-ms sub-job of A as an indepen- dent job. Thus, when the system starts, its choice is whether to schedule a 10-ms A or a 50-ms B. With STCF, the choice is clear: choose the shorter one, in this case A. Then, when the first sub-job of A has completed, only B is left, and it begins running. Then a new sub-job of A is submitted, and it preempts B and runs for 10 ms.
+  - ![alt text](images/job_scheduling.png)
+    - A common approach is to treat each 10-ms sub-job of A as an independent job. Thus, when the system starts, its choice is whether to schedule a 10-ms A or a 50-ms B. With STCF, the choice is clear: choose the shorter one, in this case A. Then, when the first sub-job of A has completed, only B is left, and it begins running. Then a new sub-job of A is submitted, and it preempts B and runs for 10 ms.
 
-### FCFS (FIFO) 	First in, First Out
-
-Cons: average turnaround time can be high!
-
-- Convey effect: a number of relatively-short potential consumers of resource get queued behind a heavyweight resource consumer
-
-### SJF (shortest job first)
-
-Improvement on FIFO: run the shortest first job first
-
-Pros: optimal scheduling algorithm for turnaround time given assumptions that jobs arriving at the same time
-
-Cons: same convey problem if we relaxed this assumption (i.e. schedule long A, then short B,C arrive)
-
-### STCF (shortest time-to-completion first)
-
-Add preemption to SJF.
-
-Any time a new job enters the system, the STCF scheduler determines which of the remaining jobs has the least time left, and schedules that one.
-
-### Round Robin
-
-Instead of running jobs to completion, RR runs a job for a time slice (i.e. scheduling quantum), then switches to next job in the run queue.
-
-Note: length of time slice is critical
-
-- Shorter, better response time, but higher context switch overhead
-
-Pros: built for high response time, fair
-
-Cons: perform bad for turnaround time, even worse than FIFO in many cases
-Priorities 	Schedule based on priority where the scheduler selects tasks based on priority (it is a general term)
 
 ### MLFQ
 
@@ -144,7 +110,6 @@ Instead of optimizing for turnaround or response time, scheduler might instead t
 - Prevention
   - Resource allocation graph: use directed graph to represent resource allocation, avoid cycles
   - Timeout: set maximum time for acquiring resources
-
 
 # Lottery Scheduling
 
@@ -221,7 +186,6 @@ Instead of optimizing for turnaround or response time, scheduler might instead t
         - E.x. jobs that perform I/O occasionally may not get their fair share of CPU
       - hard problem for ticket or priority assignment
 
-
 # Multi-Level Feedback Queue
 
 - Two problems:
@@ -257,7 +221,6 @@ Instead of optimizing for turnaround or response time, scheduler might instead t
 - Most MLFQ variants allow for varying time-slice length across different queues.
 - decay-usage algorithm: FreeBSD scheduler (version 4.3) uses a formula to calculate the current priority level of a job, basing it on how much CPU the process has used; in addition, usage is decayed over time, providing the desired priority boost in a different manner than described herein.
 - Some systems also allow some user advice to help set priorities; for example, by using the command-line utility nice you can increase or decrease the priority of a job (somewhat)
-
 
 # Multiprocessor Scheduling
 
